--- a/package.json
+++ b/package.json
@@ -11,14 +11,21 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^16.1.0",
+    "@angular/cdk": "^16.2.14",
     "@angular/common": "^16.1.0",
     "@angular/compiler": "^16.1.0",
     "@angular/core": "^16.1.0",
     "@angular/forms": "^16.1.0",
+    "@angular/material": "^16.2.14",
     "@angular/platform-browser": "^16.1.0",
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
+    "bootstrap": "^5.3.3",
+    "jquery": "^3.3.1",
+    "ngx-mask": "^18.0.0",
+    "popper.js": "^1.14.3",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.14.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
